--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 <h1>SQL Challenge</h1>
-<a href="timraynor80.github.io" target="blank">"Back Home"</a>
+<a href="http://timraynor80.github.io" target="blank">"Back Home"</a>
 </body>
 </html>
